# NarrativeAlpha

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: cluster_narratives.py  ingest_news.py  ingest_podcasts.py  ingest_reddit.py  ingest_twitter.py
src/narrativealpha/: __init__.py
src/narrativealpha/analysis/: __init__.py  clustering.py
src/narrativealpha/config/: __init__.py  settings.py
src/narrativealpha/ingestion/: __init__.py  news.py  podcast.py  reddit.py  storage.py  twitter.py
src/narrativealpha/models/: __init__.py
src/narrativealpha/pipeline/: __init__.py  orchestrator.py  summary.py
tests/: test_summary.py
tests/unit/: test_clustering.py  test_ingestion.py  test_models.py  test_news.py  test_podcast.py  test_reddit.py
